[gd_scene load_steps=8 format=2]

[ext_resource path="res://scene/weapons/ammo_pickup/ammo_pickup.gd" type="Script" id=1]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.282353, 0.564706, 0.270588, 1 )

[sub_resource type="CubeMesh" id=4]
material = SubResource( 1 )

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.643137, 0.792157, 0.580392, 1 )

[sub_resource type="CapsuleMesh" id=5]
material = SubResource( 3 )

[sub_resource type="BoxShape" id=6]

[sub_resource type="BoxShape" id=7]

[node name="Ammo" type="Area"]
script = ExtResource( 1 )

[node name="Ammo_Kit" type="MeshInstance" parent="."]
transform = Transform( 0.6, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0 )
mesh = SubResource( 4 )
skeleton = NodePath("")

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 0.599984, -0.00232577, -0.00372206, 0.00372992, 0.00202829, 0.599985, -0.00231314, -0.599992, 0.00204269, 0, 0, 0 )
mesh = SubResource( 5 )
skeleton = NodePath("")

[node name="Shape_Kit" type="CollisionShape" parent="."]
shape = SubResource( 6 )

[node name="Shape_Kit_Small" type="CollisionShape" parent="."]
shape = SubResource( 7 )

[connection signal="body_entered" from="." to="." method="_on_Ammo_body_entered"]
